--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "svix": "^1.20.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.5.0"
+    "uploadthing": "^6.5.0",
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@types/node": "^20",
